# FileQL

./: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md
.github/workflows/: release.yaml
src/: arguments.rs  data_provider.rs  functions.rs  main.rs  schema.rs
