[package]
name = "fileql"
authors = ["AmrDeveloper"]
version = "0.8.0"
edition = "2021"
description = "A tool to run SQL-like query on local files using GitQL SDK"
license = "MIT"
repository = "https://github.com/amrdeveloper/fileql/"
documentation = "https://github.com/amrdeveloper/fileql"
readme = "README.md"
keywords = ["cli", "files", "language", "gitql", "fileql"]
categories = ["command-line-utilities"]
exclude = [".github/**", "docs/**", "media/**", "scripts/**"]

[dependencies]
gitql-core = "0.5.0"
gitql-std = "0.5.0"
gitql-cli = "0.28.0"
gitql-ast = "0.25.0"
gitql-parser = "0.27.0"
gitql-engine = "0.28.0"
atty = "0.2.14"
